--- a/index.html
+++ b/index.html
@@ -26,267 +26,272 @@
     <!--Header-->
     <header class="header">
       <div class="container header-container">
-      <a class="logo link" href="./"> <img src="./imanges/logo.png" alt="One11 Bakery"></a>
-      <nav class="header-nav">
-        <ul class="header-nav-list list">
-          <li class="header-nav-list-item">
-            <a class="header-nav-link link" href="">Про нас</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-link link" href="">Меню</a>
-          </li>
-          <li class="header-nav-list-item">
-            <a class="header-nav-link link" href="">Доставка</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header-link link" href="tel:+380503086282"
-        >+38 (050) 308 62 82</a
-      >
-    </div>
+        <a class="logo link" href="./">
+          <img src="./imanges/logo.png" alt="One11 Bakery"
+        /></a>
+        <nav class="header-nav">
+          <ul class="header-nav-list list">
+            <li class="header-nav-list-item">
+              <a class="header-nav-link link" href="">Про нас</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a class="header-nav-link link" href="">Меню</a>
+            </li>
+            <li class="header-nav-list-item">
+              <a class="header-nav-link link" href="">Доставка</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header-link link" href="tel:+380503086282"
+          >+38 (050) 308 62 82</a
+        >
+      </div>
     </header>
     <!--Main content-->
     <main>
       <!--Hero-->
       <section class="hero">
         <div class="container">
-        <h1 class="hero-title">Наші круасани - це симфонія смаків.</h1>
-        <h2 class="hero-subtitle">CПІВПРАЦЮЙТЕ З НАМИ !</h2>
+          <h1 class="hero-title">Наші круасани - це симфонія смаків.</h1>
+          <h2 class="hero-subtitle">CПІВПРАЦЮЙТЕ З НАМИ !</h2>
         </div>
       </section>
       <!--Advantages-->
       <section class="advantages">
-        <div class="container">
         <h2 class="advantages-title visually-hidden">ПРО НАС</h2>
-        <ul class="advantages-list list">
-          <li class="advantages-list-item">
-            <img
-              class="advantages-img"
-              src="./imanges/advantages/1-img.jpg"
-              alt="Серед великої жмені борошна лежить шматок вершкового масла"
-              width="370"
-              height="310"
-            />
-            <p class="advantages-text">
-              Кожен наш круасан майже на чверть складється зі справжнього
-              вершкового масла з відсотком жирів не менш ніж 82%. Це є догма
-              класичної рецептури, якої ми чітко дотримуємося.
-            </p>
-          </li>
-          <li class="advantages-list-item">
-            <p class="advantages-text light-text">
-              На виготовлення крафтового круасана необхідно цілу добу для
-              ретельної та багатоетапної обробки тіста. Це включає замішування,
-              кілька етапів вистоювання, та складання тіста з маслом.
-            </p>
-            <img
-              class="advantages-img"
-              src="./imanges/advantages/2-img.jpg"
-              alt="На кухні пекарні дівчина у фартушці скручує тісто у форму краусанів"
-              width="370"
-              height="310"
-            />
-          </li>
-          <li class="advantages-list-item">
-            <img
-              class="advantages-img"
-              src="./imanges/advantages/3-img.jpg"
-              alt="У духовці випечені круасани"
-              width="370"
-              height="310"
-            />
-            <p class="advantages-text">
-              В результаті ми отримуємо справжній круасан, який володіє такими
-              якостями, як хрусткий ззовні, легкий і повітряний, а головне -
-              соковитий всередині.
-            </p>
-          </li>
-        </ul>
+        <div class="container advantages-container">
+          <ul class="advantages-list list">
+            <li class="advantages-list-item">
+              <img
+                class="advantages-img"
+                src="./imanges/advantages/1-img.jpg"
+                alt="Серед великої жмені борошна лежить шматок вершкового масла"
+                width="370"
+                height="310"
+              />
+              <p class="advantages-text">
+                Кожен наш круасан майже на чверть складється зі справжнього
+                вершкового масла з відсотком жирів не менш ніж 82%. Це є догма
+                класичної рецептури, якої ми чітко дотримуємося.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <p class="advantages-text light-text">
+                На виготовлення крафтового круасана необхідно цілу добу для
+                ретельної та багатоетапної обробки тіста. Це включає
+                замішування, кілька етапів вистоювання, та складання тіста з
+                маслом.
+              </p>
+              <img
+                class="advantages-img"
+                src="./imanges/advantages/2-img.jpg"
+                alt="На кухні пекарні дівчина у фартушці скручує тісто у форму краусанів"
+                width="370"
+                height="310"
+              />
+            </li>
+            <li class="advantages-list-item">
+              <img
+                class="advantages-img"
+                src="./imanges/advantages/3-img.jpg"
+                alt="У духовці випечені круасани"
+                width="370"
+                height="310"
+              />
+              <p class="advantages-text">
+                В результаті ми отримуємо справжній круасан, який володіє такими
+                якостями, як хрусткий ззовні, легкий і повітряний, а головне -
+                соковитий всередині.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <!--Product range-->
       <section class="products">
         <div class="container">
-        <h2 class="products-title">Ми пропонуюємо</h2>
-        <ul class="products-list list">
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/almond.jpg"
-              alt="Круасан з мигдалем"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">мигдальний</h3>
-            <p class="products-text">
-              з франжипановою начинкою з мигдального горіха
-            </p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/cherry.jpg"
-              alt="Круасан з вишнею"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">вишневий</h3>
-            <p class="products-text">з вишнево - шоколадною начинкою</p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/chocolate.jpg"
-              alt="Круасан политий шоколадом"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">шоколадний</h3>
-            <p class="products-text">з шоколадно - фундучною начинкою</p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/chicken.jpg"
-              alt="Розрізаний круасан всередині шматочки курки"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">з куркою</h3>
-            <p class="products-text">з сиром, салатом та соусом тартар</p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/salmon.jpg"
-              alt="Розрізаний круасан всередині шматочки сьомги"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">з сьомгою</h3>
-            <p class="products-text">
-              з соусом песто, сирним соусом та салатом
-            </p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/prosciutto.jpg"
-              alt="Розрізаний круасан всередині шматочки прошутто"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">з прошутто</h3>
-            <p class="products-text">
-              з сирнім соусом, руколою, в’яленими томатома та соусом песто
-            </p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/ham.jpg"
-              alt="Розрізаний круасан всередині шматочки шинки"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">з шинкою</h3>
-            <p class="products-text">з сиром, салатом та соусом тартар</p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/turkey.jpg"
-              alt="Розрізаний круасан всередині шматочки індички"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">з індичкою</h3>
-            <p class="products-text">з в’яленими томатами та соусом тартар</p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/salami.jpg"
-              alt="Розрізаний круасан всередині шматочки ковбаси салямі"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">з салямі</h3>
-            <p class="products-text">з сиром, салатом та соусом тартар</p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/beef.jpg"
-              alt="Розрізаний круасан всередині шматочки яловичини"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">з яловичиною</h3>
-            <p class="products-text">з сиром, салатом та соусом барбекю</p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/half-stuff.jpg"
-              alt="Круасан без начинки"
-              width="280"
-              height="250"
-            />
-            <h3 class="products-subtitle">порожній</h3>
-            <p class="products-text">
-              напівфабрикат для самостійного наповнення
-            </p>
-          </li>
-          <li class="products-list-item">
-            <img
-              class="products-list-img"
-              src="./imanges/products/package.jpg"
-              alt="Круасан в упаковці"
-              width="280"
-              height="250"
-            />
-            <p class="products-text">індивідуальна упаковка</p>
-          </li>
-        </ul>
-        <h2 class="products-newstitle">
-          далі буде ще, бо ми вже розробляємо цікаві новинки у світі листкового
-          тіста.
-        </h2>
+          <h2 class="products-title">Ми пропонуюємо</h2>
+          <ul class="products-list list">
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/almond.jpg"
+                alt="Круасан з мигдалем"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">мигдальний</h3>
+              <p class="products-text">
+                з франжипановою начинкою з мигдального горіха
+              </p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/cherry.jpg"
+                alt="Круасан з вишнею"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">вишневий</h3>
+              <p class="products-text">з вишнево - шоколадною начинкою</p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/chocolate.jpg"
+                alt="Круасан политий шоколадом"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">шоколадний</h3>
+              <p class="products-text">з шоколадно - фундучною начинкою</p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/chicken.jpg"
+                alt="Розрізаний круасан всередині шматочки курки"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">з куркою</h3>
+              <p class="products-text">з сиром, салатом та соусом тартар</p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/salmon.jpg"
+                alt="Розрізаний круасан всередині шматочки сьомги"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">з сьомгою</h3>
+              <p class="products-text">
+                з соусом песто, сирним соусом та салатом
+              </p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/prosciutto.jpg"
+                alt="Розрізаний круасан всередині шматочки прошутто"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">з прошутто</h3>
+              <p class="products-text">
+                з сирнім соусом, руколою, в’яленими томатома та соусом песто
+              </p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/ham.jpg"
+                alt="Розрізаний круасан всередині шматочки шинки"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">з шинкою</h3>
+              <p class="products-text">з сиром, салатом та соусом тартар</p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/turkey.jpg"
+                alt="Розрізаний круасан всередині шматочки індички"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">з індичкою</h3>
+              <p class="products-text">з в’яленими томатами та соусом тартар</p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/salami.jpg"
+                alt="Розрізаний круасан всередині шматочки ковбаси салямі"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">з салямі</h3>
+              <p class="products-text">з сиром, салатом та соусом тартар</p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/beef.jpg"
+                alt="Розрізаний круасан всередині шматочки яловичини"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">з яловичиною</h3>
+              <p class="products-text">з сиром, салатом та соусом барбекю</p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/half-stuff.jpg"
+                alt="Круасан без начинки"
+                width="280"
+                height="250"
+              />
+              <h3 class="products-subtitle">порожній</h3>
+              <p class="products-text">
+                напівфабрикат для самостійного наповнення
+              </p>
+            </li>
+            <li class="products-list-item">
+              <img
+                class="products-list-img"
+                src="./imanges/products/package.jpg"
+                alt="Круасан в упаковці"
+                width="280"
+                height="250"
+              />
+              <p class="products-text">індивідуальна упаковка</p>
+            </li>
+          </ul>
+          <h2 class="products-newstitle">
+            далі буде ще, бо ми вже розробляємо цікаві новинки у світі
+            листкового тіста.
+          </h2>
         </div>
       </section>
       <!--Delivery-->
       <section class="delivery">
         <div class="container">
-        <h2 class="delivery-title visually-hidden">ДОСТАВКА</h2>
-        <ul class="delivery-list list">
-          <li class="delivery-list-item">
-            <h3 class="delivery-list-text">
-              Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5
-              разів на тиждень, в залежності від вашої адреси.
-            </h3>
-          </li>
-          <li class="delivery-list-item">
-            <h3 class="delivery-list-text light-text">
-              Замовлення приймаються до 19:00.
-            </h3>
-          </li>
-          <li class="delivery-list-item">
-            <h3 class="delivery-list-text">
-              Можливе самовивезення за адресою м. Вишгород, вул. Ватутіна 111.
-            </h3>
-          </li>
-        </ul>
+          <h2 class="delivery-title visually-hidden">ДОСТАВКА</h2>
+          <ul class="delivery-list list">
+            <li class="delivery-list-item">
+              <h3 class="delivery-list-text">
+                Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5
+                разів на тиждень, в залежності від вашої адреси.
+              </h3>
+            </li>
+            <li class="delivery-list-item">
+              <h3 class="delivery-list-text light-text">
+                Замовлення приймаються до 19:00.
+              </h3>
+            </li>
+            <li class="delivery-list-item">
+              <h3 class="delivery-list-text">
+                Можливе самовивезення за адресою м. Вишгород, вул. Ватутіна 111.
+              </h3>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <!--Footer-->
     <footer class="footer">
-      <div class="container">
-      <a class="logo link" href="./"><img src="./imanges/logo.png" alt="One11 Bakery"></a>
-      <a class="footer-link link" href="tel:+380503086282"
-        >+38 (050) 308 62 82</a
-      >
+      <div class="container footer-container">
+        <a class="logo link" href="./"
+          ><img src="./imanges/logo.png" alt="One11 Bakery"
+        /></a>
+        <a class="footer-link link" href="tel:+380503086282"
+          >+38 (050) 308 62 82</a
+        >
       </div>
     </footer>
   </body>
