--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
       <!--Advantages-->
       <section class="advantages">
-        <h2 class="advantages-title visually-hidden">ПРО НАС</h2>
+        <h2 class="visually-hidden">ПРО НАС</h2>
         <div class="container advantages-container">
           <ul class="advantages-list list">
             <li class="advantages-list-item">
@@ -109,7 +109,7 @@
       </section>
       <!--Product range-->
       <section class="products">
-        <div class="container">
+        <div class="container products-container ">
           <h2 class="products-title">Ми пропонуюємо</h2>
           <ul class="products-list list">
             <li class="products-list-item">
@@ -120,10 +120,12 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">мигдальний</h3>
               <p class="products-text">
                 з франжипановою начинкою з мигдального горіха
               </p>
+            </div>
             </li>
             <li class="products-list-item">
               <img
@@ -133,8 +135,10 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">вишневий</h3>
               <p class="products-text">з вишнево - шоколадною начинкою</p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -144,8 +148,10 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">шоколадний</h3>
               <p class="products-text">з шоколадно - фундучною начинкою</p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -155,8 +161,10 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">з куркою</h3>
               <p class="products-text">з сиром, салатом та соусом тартар</p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -166,10 +174,12 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">з сьомгою</h3>
               <p class="products-text">
                 з соусом песто, сирним соусом та салатом
               </p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -179,10 +189,12 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">з прошутто</h3>
               <p class="products-text">
-                з сирнім соусом, руколою, в’яленими томатома та соусом песто
+                з сирнім соусом, руколою, в’яленими томатоми та соусом песто
               </p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -192,8 +204,10 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">з шинкою</h3>
               <p class="products-text">з сиром, салатом та соусом тартар</p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -203,8 +217,10 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">з індичкою</h3>
               <p class="products-text">з в’яленими томатами та соусом тартар</p>
+              </div> 
             </li>
             <li class="products-list-item">
               <img
@@ -214,8 +230,10 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">з салямі</h3>
               <p class="products-text">з сиром, салатом та соусом тартар</p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -225,8 +243,10 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">з яловичиною</h3>
               <p class="products-text">з сиром, салатом та соусом барбекю</p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -236,10 +256,12 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper">
               <h3 class="products-subtitle">порожній</h3>
               <p class="products-text">
                 напівфабрикат для самостійного наповнення
               </p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -249,7 +271,9 @@
                 width="280"
                 height="250"
               />
+              <div class="products-wrapper-last">
               <p class="products-text">індивідуальна упаковка</p>
+              </div>
             </li>
           </ul>
           <h2 class="products-newstitle">
