--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </section>
       <!--Advantages-->
-      <section class="advantages">
+      <section class="advantages section">
         <h2 class="visually-hidden">ПРО НАС</h2>
         <div class="container advantages-container">
           <ul class="advantages-list list">
@@ -108,8 +108,8 @@
         </div>
       </section>
       <!--Product range-->
-      <section class="products">
-        <div class="container products-container ">
+      <section class="products section">
+        <div class="container products-container">
           <h2 class="products-title">Ми пропонуюємо</h2>
           <ul class="products-list list">
             <li class="products-list-item">
@@ -121,11 +121,11 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">мигдальний</h3>
-              <p class="products-text">
-                з франжипановою начинкою з мигдального горіха
-              </p>
-            </div>
+                <h3 class="products-subtitle">мигдальний</h3>
+                <p class="products-text">
+                  з франжипановою начинкою з мигдального горіха
+                </p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -136,8 +136,8 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">вишневий</h3>
-              <p class="products-text">з вишнево - шоколадною начинкою</p>
+                <h3 class="products-subtitle">вишневий</h3>
+                <p class="products-text">з вишнево - шоколадною начинкою</p>
               </div>
             </li>
             <li class="products-list-item">
@@ -149,8 +149,8 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">шоколадний</h3>
-              <p class="products-text">з шоколадно - фундучною начинкою</p>
+                <h3 class="products-subtitle">шоколадний</h3>
+                <p class="products-text">з шоколадно - фундучною начинкою</p>
               </div>
             </li>
             <li class="products-list-item">
@@ -162,8 +162,8 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">з куркою</h3>
-              <p class="products-text">з сиром, салатом та соусом тартар</p>
+                <h3 class="products-subtitle">з куркою</h3>
+                <p class="products-text">з сиром, салатом та соусом тартар</p>
               </div>
             </li>
             <li class="products-list-item">
@@ -175,10 +175,10 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">з сьомгою</h3>
-              <p class="products-text">
-                з соусом песто, сирним соусом та салатом
-              </p>
+                <h3 class="products-subtitle">з сьомгою</h3>
+                <p class="products-text">
+                  з соусом песто, сирним соусом та салатом
+                </p>
               </div>
             </li>
             <li class="products-list-item">
@@ -190,10 +190,10 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">з прошутто</h3>
-              <p class="products-text">
-                з сирнім соусом, руколою, в’яленими томатоми та соусом песто
-              </p>
+                <h3 class="products-subtitle">з прошутто</h3>
+                <p class="products-text">
+                  з сирнім соусом, руколою, в’яленими томатоми та соусом песто
+                </p>
               </div>
             </li>
             <li class="products-list-item">
@@ -205,8 +205,8 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">з шинкою</h3>
-              <p class="products-text">з сиром, салатом та соусом тартар</p>
+                <h3 class="products-subtitle">з шинкою</h3>
+                <p class="products-text">з сиром, салатом та соусом тартар</p>
               </div>
             </li>
             <li class="products-list-item">
@@ -218,9 +218,11 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">з індичкою</h3>
-              <p class="products-text">з в’яленими томатами та соусом тартар</p>
-              </div> 
+                <h3 class="products-subtitle">з індичкою</h3>
+                <p class="products-text">
+                  з в’яленими томатами та соусом тартар
+                </p>
+              </div>
             </li>
             <li class="products-list-item">
               <img
@@ -231,8 +233,8 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">з салямі</h3>
-              <p class="products-text">з сиром, салатом та соусом тартар</p>
+                <h3 class="products-subtitle">з салямі</h3>
+                <p class="products-text">з сиром, салатом та соусом тартар</p>
               </div>
             </li>
             <li class="products-list-item">
@@ -244,8 +246,8 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">з яловичиною</h3>
-              <p class="products-text">з сиром, салатом та соусом барбекю</p>
+                <h3 class="products-subtitle">з яловичиною</h3>
+                <p class="products-text">з сиром, салатом та соусом барбекю</p>
               </div>
             </li>
             <li class="products-list-item">
@@ -257,10 +259,10 @@
                 height="250"
               />
               <div class="products-wrapper">
-              <h3 class="products-subtitle">порожній</h3>
-              <p class="products-text">
-                напівфабрикат для самостійного наповнення
-              </p>
+                <h3 class="products-subtitle">порожній</h3>
+                <p class="products-text">
+                  напівфабрикат для самостійного наповнення
+                </p>
               </div>
             </li>
             <li class="products-list-item">
@@ -272,7 +274,7 @@
                 height="250"
               />
               <div class="products-wrapper-last">
-              <p class="products-text">індивідуальна упаковка</p>
+                <p class="products-text">індивідуальна упаковка</p>
               </div>
             </li>
           </ul>
@@ -283,8 +285,8 @@
         </div>
       </section>
       <!--Delivery-->
-      <section class="delivery">
-        <div class="container">
+      <section class="delivery section">
+        <div class="container delivery-container">
           <h2 class="delivery-title visually-hidden">ДОСТАВКА</h2>
           <ul class="delivery-list list">
             <li class="delivery-list-item">
