--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!--Main content-->
     <main>
       <!--Hero-->
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Наші круасани - це симфонія смаків.</h1>
           <h2 class="hero-subtitle">CПІВПРАЦЮЙТЕ З НАМИ !</h2>
