--- a/index.html
+++ b/index.html
@@ -42,9 +42,37 @@
             </li>
           </ul>
         </nav>
-        <a class="header-link link" href="tel:+380503086282"
-          >+38 (050) 308 62 82</a
-        >
+        <ul class="header-list list">
+          <li class="header-list-item">
+            <a class="header-link link" href="tel:+380503086282"
+              >+38 (050) 308 62 82</a
+            >
+          </li>
+          <li class="header-list-item">
+            <a
+              class="socials-link link"
+              href=""
+              target="_blank"
+              rel="noreferrer noopener"
+              aria-label="instagram"
+            >
+              <svg class="socials-icon" width="32" height="32">
+                <use href="./imanges/incons.svg#icon-telegram"></use></svg
+            ></a>
+          </li>
+          <li class="header-list-item">
+            <a
+              class="socials-link link"
+              href=""
+              target="_blank"
+              rel="noreferrer noopener"
+              aria-label="instagram"
+            >
+              <svg class="socials-icon" width="32" height="32">
+                <use href="./imanges/incons.svg#icon-instagram"></use></svg
+            ></a>
+          </li>
+        </ul>
       </div>
     </header>
     <!--Main content-->
@@ -318,6 +346,33 @@
         <a class="footer-link link" href="tel:+380503086282"
           >+38 (050) 308 62 82</a
         >
+        <ul class="footer-list list">
+          <li class="footer-list-item">
+            <a
+              class="socials-link link"
+              href=""
+              target="_blank"
+              rel="noreferrer noopener"
+              aria-label="telegram"
+            >
+              <svg class="socials-icon" width="32" height="32">
+                <use href="./imanges/incons.svg#icon-telegram"></use></svg
+            ></a>
+
+          </li>
+          <li class="footer-list-item">
+            <a
+              class="socials-link link"
+              href=""
+              target="_blank"
+              rel="noreferrer noopener"
+              aria-label="instagram"
+            >
+              <svg class="socials-icon" width="32" height="32">
+                <use href="./imanges/incons.svg#icon-instagram"></use></svg
+            ></a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
