--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               rel="noreferrer noopener"
               aria-label="telegram"
             >
-              <svg class="socials-icon-tg" width="32" height="32">
+              <svg class="socials-icon" width="32" height="32">
                 <use href="./imanges/incons.svg#icon-telegram"></use></svg
             ></a>
           </li>
@@ -69,7 +69,7 @@
               aria-label="instagram"
             >
               <svg
-                class="socials-icon-inst"
+                class="socials-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
                 height="32"
@@ -462,7 +462,7 @@
               aria-label="instagram"
             >
             <svg
-                class="socials-icon-inst"
+                class="socials-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
                 height="32"
