--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <nav class="header-nav">
           <ul class="header-nav-list list">
             <li class="header-nav-list-item">
-              <a class="header-nav-link link" href="">Про нас</a>
+              <a class="header-nav-link link" href="#advantages">Про нас</a>
             </li>
             <li class="header-nav-list-item">
-              <a class="header-nav-link link" href="">Меню</a>
+              <a class="header-nav-link link" href="#products">Меню</a>
             </li>
             <li class="header-nav-list-item">
-              <a class="header-nav-link link" href="">Доставка</a>
+              <a class="header-nav-link link" href="#delivery">Доставка</a>
             </li>
           </ul>
         </nav>
@@ -180,7 +180,7 @@
       </section>
       <!--Advantages-->
       <section class="advantages section">
-        <h2 class="visually-hidden">ПРО НАС</h2>
+        <h2 id="advantages" class="visually-hidden">ПРО НАС</h2>
         <div class="container advantages-container">
           <ul class="advantages-list list">
             <li class="advantages-list-item">
@@ -232,7 +232,7 @@
       <!--Product range-->
       <section class="products section">
         <div class="container products-container">
-          <h2 class="products-title">Ми пропонуюємо</h2>
+          <h2 id="products" class="products-title">Ми пропонуюємо</h2>
           <ul class="products-list list">
             <li class="products-list-item">
               <img
@@ -409,7 +409,7 @@
       <!--Delivery-->
       <section class="delivery section">
         <div class="container delivery-container">
-          <h2 class="delivery-title visually-hidden">ДОСТАВКА</h2>
+          <h2 id="delivery" class="delivery-title visually-hidden">ДОСТАВКА</h2>
           <ul class="delivery-list list">
             <li class="delivery-list-item">
               <h3 class="delivery-list-text">
