--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,400..800&display=swap"
+      rel="stylesheet"
+    />
     <!--CSS-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -173,9 +179,11 @@
     <main>
       <!--Hero-->
       <section class="hero section">
-        <div class="container">
-          <h1 class="hero-title">Наші круасани - це симфонія смаків.</h1>
-          <h2 class="hero-subtitle">CПІВПРАЦЮЙТЕ З НАМИ !</h2>
+        <div class="container text-container">
+          <h1 class="hero-title animated-text">
+            Наші круасани - це симфонія смаків.
+          </h1>
+          <h2 class="hero-subtitle animated-subtitle">Cпівпрацюйте з нами !</h2>
         </div>
       </section>
       <!--Advantages-->
@@ -461,7 +469,7 @@
               rel="noreferrer noopener"
               aria-label="instagram"
             >
-            <svg
+              <svg
                 class="socials-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
@@ -557,11 +565,12 @@
                   </radialGradient>
                 </defs>
               </svg>
-              
-             </a>
+            </a>
           </li>
         </ul>
       </div>
     </footer>
+
+    <script src="./js/scripts.js"></script>
   </body>
 </html>
