--- a/index.html
+++ b/index.html
@@ -176,11 +176,17 @@
     <main>
       <!--Hero-->
       <section class="hero section">
-        <div class="container text-container">
-          <h1 class="hero-title animated-text">
-            Наші круасани - це симфонія смаків.
-          </h1>
-          <h2 class="hero-subtitle animated-subtitle">Cпівпрацюйте з нами !</h2>
+        <div class="container text-container hero-container">
+          <div class="carousel">
+            <div class="slide" style="background-image: url(./imanges/hero/hero1.jpg);">
+              <h1 class="hero-title animated-text">
+                Наші круасани - це симфонія смаків.
+              </h1>
+              <h2 class="hero-subtitle animated-subtitle">Cпівпрацюйте з нами !</h2>
+            </div>
+            <div class="slide" style="background-image: url(./imanges/hero/hero2.jpg);"></div>
+            <div class="slide" style="background-image: url(./imanges/hero/hero3.jpg);"></div>
+          </div>  
         </div>
       </section>
       <!--Advantages-->
@@ -386,9 +392,9 @@
                 height="250"
               />
               <div class="products-wrapper">
-                <h3 class="products-subtitle">порожній</h3>
+                <h3 class="products-subtitle">класичний</h3>
                 <p class="products-text">
-                  напівфабрикат для самостійного наповнення
+                  порожній для самостійного наповнення
                 </p>
               </div>
             </li>
@@ -569,5 +575,6 @@
     </footer>
 
     <script src="./js/scripts.js"></script>
+    <script src="./js/scripts2.js"></script>
   </body>
 </html>
