--- a/index.html
+++ b/index.html
@@ -411,10 +411,14 @@
               </div>
             </li>
           </ul>
+          <div class="products-blok">
+            <div class="products-blok-anim">
           <h2 class="products-newstitle">
             далі буде ще, бо ми вже розробляємо цікаві новинки у світі
             листкового тіста.
           </h2>
+        </div>
+        </div>
         </div>
       </section>
       <!--Delivery-->
