--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="header-list-item">
             <a
               class="socials-link link"
-              href=""
+              href="https://t.me/a/#689936819"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="telegram"
@@ -66,7 +66,7 @@
           <li class="header-list-item">
             <a
               class="socials-link link"
-              href=""
+              href="https://www.instagram.com/one11bakery/"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="instagram"
@@ -471,7 +471,7 @@
           <li class="footer-list-item">
             <a
               class="socials-link link"
-              href=""
+              href="https://www.instagram.com/one11bakery/"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="instagram"
