--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="header-list-item">
             <a
               class="socials-link link"
-              href="https://t.me/a/#689936819"
+              href="https://t.me/One11_Bakery"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="telegram"
@@ -459,7 +459,7 @@
           <li class="footer-list-item">
             <a
               class="socials-link link"
-              href=""
+              href="https://t.me/One11_Bakery"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="telegram"
